en ajoute les controllers and view